@@ -23,6 +23,7 @@ Legend:
 * Updated ZenLib to v0.4.27
 * Updated FFmpeg (git 37b5959)
 * Updated Little CMS to v2.4 (git 88af283)
+* Updated SoundTouch to v1.7.0pre r143
 * Updated Czech, Russian, Ukrainian, Basque, Polish and Catalan translations
 * Ticket #2227, Hide the seek bar in capture mode
 * Ticket #2342, MPC-HC will now use the Windows theme font for the Statusbar, OSD messages
